# SciFig

./: .geminiignore  .gitignore  GEMINI.md  README.md  backup.md  cmd.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.mplstyle  default_config.yaml  matplotlibrc  themes.yaml
configs/layouts/: 2x2_default.json
data/: 2023_10_17_AV03_A_Co_C_Capillary.xy  Cross_Spot_1_01.tif  FeFoil_Fe_exafs_0000T.nor  test.sci  three_column_data.csv  two_column_data.csv
docs/: TDD_2.md  architecture-design-document.md  backlog.md  example-technical-design-document.md  features.md  folder_structure.md  plot_types.md  product-requirements-document.md  software-requirements-specification.md  tdd_2.md  technical-design-document-2.md  technical-design-document-3.md  technical-design-document-4.md  technical-design-document-5.md  technical-design-document.md  technical-design-document_2.md
docs/archive/: refactor.md
examples/Journal Styles/: Nature.json  Nature.mplstyle  Overview.xlsx
src/: app.py  application_assembler.py  application_components.py  config_service.py  constants.py  layout_engine.py  layout_manager.py  logger_config.py  theme_manager.py  types.py  utils.py
src/builders/: main_window_builder.py  menu_bar_builder.py  tool_bar_builder.py
src/commands/: __init__.py  base_command.py  batch_change_plot_geometry_command.py  change_property_command.py  command_manager.py
src/shared/: color.py  (+8 more)
tests/: test_application_assembler.py  test_config_service.py  test_layout_engine.py  test_layout_manager.py  test_strategies.md  utils.py
(+355 files in other folders)
