[project]
name = "data-analysis-gui"
version = "0.1.0" # Placeholder, update as needed
description = "A GUI for data analysis application"
authors = [
    { name = "Julian Baumgärtner", email = "julian.f.baumgaertner@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["data-analysis", "gui", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6",
    "PySideSix-Frameless-Window",
    "matplotlib",
    "pandas",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "pytest-mock",
    "black",
    "ruff",
    "mypy",
    "pydantic",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] # E, F, W are standard, I is for isort

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true